--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -27,4 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     testCompile 'junit:junit:4.12'
     compile 'com.mcxiaoke.volley:library:1.0.19'
+    compile 'com.google.firebase:firebase-core:15.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
